Hopefully fixes issue with particles and cursor clipping

--- a/css/main.css
+++ b/css/main.css
@@ -555,7 +555,7 @@ header .socials ul li a {
   height: 100%;
   width: 100%;
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -564,6 +564,8 @@ header .socials ul li a {
   font-size: 1.5rem;
   padding: 10px 20px 10px 30px;
   transition: all 0.3s ease;
+  z-index: 10;
+  pointer-events: auto;
 }
 
 header .socials ul li a i {
